--- a/bin/main/templates/resetPassword.html
+++ b/bin/main/templates/resetPassword.html
@@ -1,25 +1,43 @@
 <html>
     <head>
         <title>비밀번호 재설정</title>
-        <div th:replace="fragments/header::header"></div>
+        <div th:replace="~{fragments/header::header}"></div>
+        <script th:src="@{/js/resetPw.js}"></script>
     </head>
+    <div th:if="${error}" class="alert alert-danger" role="alert" th:text="${error}"></div>
     <div class="wrapper">
         <div class="resetPw-head">
             <h1>비밀번호 재설정</h1>
             <span class="btn-close"><i class="fa-solid fa-x"></i></span>
         </div>
         <div id="resetPw">
-            <div class="resetPw-body">
-                <div class="input-area">
-                    <input type="text" name="mbl_tel_no" placeholder="휴대폰번호" class="input-text" />
-                    <input type="password" name="passwd" placeholder="비밀번호(4자이상)" class="input-text" />
-                    <input type="password" name="passwd2" placeholder="비밀번호(4자이상)" class="input-text" />
+            <form id="resetForm" action="/resetPassword" method="POST">
+                <div class="resetPw-body">
+                    <div class="input-area">
+                        <input type="number" id="loginid" name="loginid" placeholder="휴대폰번호" class="input-text" />
+                    </div>
+                    <div id="auth">
+                        <div class="auth-body">
+                            <div class="input-area">
+                                <input type="text" placeholder="4자리 인증번호" class="input-text authNum" />
+                            </div>
+                            <div class="time-area">
+                                <span class="auth-time">03:00</span>
+                            </div>
+                            <div class="input-area password-box">
+                                <input type="password" class="input-text" id="passwd" name="passwd" placeholder="비밀번호(4자리 이상)" />
+                                <input type="password" class="input-text" id="passwd2" name="passwd2" placeholder="비밀번호 확인" />
+                                <span class="pw-warning warning">비밀번호와 비밀번호 확인 문자가 맞지 않습니다.</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn-area">
+                        <button class="btn secondary close-btn" type="button">취소</button>
+                        <button class="btn primary auth-btn" type="button">인증</button>
+                        <button class="btn primary submit_btn" type="button">비밀번호 재설정</button>
+                    </div>
                 </div>
-                <div class="btn-area">
-                    <button class="btn secondary close-btn" type="button">취소</button>
-                    <button class="btn primary" type="button">비밀번호 재설정</button>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </html>
