--- a/bin/main/templates/edit.html
+++ b/bin/main/templates/edit.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>서류편집</title>
-        <div th:replace="fragments/header::header"></div>
+        <div th:replace="~{fragments/header::header}"></div>
         <script th:src="@{/js/edit.js}"></script>
     </head>
     <div class="wrapper">
@@ -11,135 +11,122 @@
         </div>
         <div id="edit">
             <div class="edit-head">
-                <button class="btn primary">저장</button>
-                <button class="btn tertiary">결재</button>
-                <button class="btn secondary">삭제</button>
+                <button type="button" class="btn primary save-btn">저장</button>
+                <button type="button" class="btn tertiary approval-btn">결재</button>
+                <button type="button" class="btn secondary delete-btn" th:if="${info.status_cd != '반려'}" >삭제</button>
             </div>
             <div class="edit-body">
-                <div class="body-top">
-                    <div class="info-box">
-                        <input type="text" class="input-text" />
-                        <div class="info">
-                            <div>
-                                <span class="text-title">문서번호</span>
-                                <span>202201-004-5582</span>
-                            </div>
-                            <div>
-                                <span class="text-title">작성일자</span>
-                                <span>2022-01-04 12:45:27</span>
-                            </div>
-                            <div>
-                                <span class="text-title">작성자</span>
-                                <span class="half-width">경리계장A</span>
-                                <span class="text-title">작성자</span>
-                                <span>경리계장A</span>
-                            </div>
-                            <div>
-                                <span class="text-title">문서종류</span>
-                                <span class="half-width">보고문서</span>
-                                <span class="text-title">문서상태</span>
-                                <span>진행중</span>
-                            </div>
-                            <div>
-                                <span class="text-title">반려</span>
-                                <span class="yellow-txt">202201-004-5582</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="body-middle">
-                    <div class="approval-box">
-                        <button type="button" class="btn secondary approval">
-                            <span class="btn-txt">결재</span>
-                            <span><i class="fa-solid fa-chevron-down"></i></span>
-                        </button>
-                        <button type="button" class="btn secondary announcement">
-                            <span class="btn-txt">공람(모든 공람 선택/해제)</span>
-                            <span><i class="fa-solid fa-chevron-down"></i></span>
-                        </button>
-                    </div>
-                    <div class="approval-toggle toggle-box">
-                        <span class="title">
-                            <span class="title-txt">결재</span>
-                            <span class="title-icon"><i class="fa-solid fa-chevron-down"></i></span>
-                        </span>
-                        <div>
-                            <span>차장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                        <div>
-                            <span>부장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                        <div>
-                            <span>사장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                    </div>
-                    <div class="announcement-toggle toggle-box">
-                        <span class="title">
-                            <span class="title-txt">공람(모든 공람 선택/해제)</span>
-                            <span class="title-icon"><i class="fa-solid fa-chevron-down"></i></span>
-                        </span>
-                        <div>
-                            <span>배차차장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                        <div>
-                            <span>배차부장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                        <div>
-                            <span>정비과장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                        <div>
-                            <span>정비차장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                        <span class="line"></span>
-                        <div>
-                            <span>경리이사</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                        <div>
-                            <span>경리계장</span>
-                            <span><i class="fa-regular fa-square-check fa-lg"></i></span>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <span class="title">내용</span>
-                        <textarea id="content"></textarea>
-                    </div>
-                </div>
-                <div class="body-bottom">
-                    <div class="title-box">
-                        <span class="title">첨부파일</span>
-                        <span class="title-icon"><i class="fa-solid fa-plus"></i></span>
-                    </div>
-                    <div class="file-box">
-                        <span class="filename">1 file uploaded</span>
-                        <span class="plus-icon">
-                            <i class="fa-solid fa-circle-plus"></i>
-                            <span class="file-size"></span>
-                        </span>
-                        <div class="file-bottom">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                <form action="/update" method="POST" id="update">
+                    <input type="hidden" name="id" class="id" th:value="${id}" />
+                    <input type="hidden" class="emp_nm" th:value="${info.emp_nm}" />
+                    <input type="hidden" name="form_type" class="form_type" />
+                    <input type="hidden" name="status_cd" th:value="${info.status_cd}" />
+                    <div class="body-top">
+                        <div class="info-box">
+                            <input type="text" name="title" class="input-text title" th:value="${info.title}" />
+                            <div class="info">
+                                <div>
+                                    <span class="text-title">문서번호</span>
+                                    <span th:text="${info.doc_num}"></span>
+                                </div>
+                                <div>
+                                    <span class="text-title">작성일자</span>
+                                    <span th:text="${info.create_date}"></span>
+                                </div>
+                                <div>
+                                    <span class="text-title">작성자</span>
+                                    <span th:text="${info.emp_nm}"></span>
+                                </div>
+                                <div>
+                                    <span class="text-title">문서종류</span>
+                                    <span>
+                                        <select id="type_cd" class="type_cd" name="type_cd">
+                                            <option value="999">선택</option>
+                                            <option th:selected="${info.type_cd} == '내부기안'" value="001">내부기안</option>
+                                            <option th:selected="${info.type_cd} == '외부발송'" value="002">외부발송</option>
+                                            <option th:selected="${info.type_cd} == '접수문서'" value="003">접수문서</option>
+                                            <option th:selected="${info.type_cd} == '보고문서'" value="004">보고문서</option>
+                                            <option th:selected="${info.type_cd} == '업무일지'" value="005">업무일지</option>
+                                            <option th:selected="${info.type_cd} == '연차신청'" value="006">연차신청</option>
+                                            <option th:selected="${info.type_cd} == '지출결의'" value="007">지출결의</option>
+                                        </select>
+                                    </span>
+                                </div>
+                                <div>
+                                    <span class="text-title">문서상태</span>
+                                    <span th:text="${info.status_cd}"></span>
+                                </div>
+                                <div>
+                                    <span class="text-title">반려</span>
+                                    <span class="yellow-txt" th:text="${info.copy_id}"></span>
+                                    <input type="hidden" name="copy_docid" th:value="${info.copy_docid} ? ${info.copy_docid} : ''" />
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="file-box">
-                        <span class="filename">file_name.jpg</span>
-                        <span class="plus-icon">
-                            <i class="fa-solid fa-circle-plus"></i>
-                            <span class="file-size">3Mb</span>
-                        </span>
-                        <div class="file-bottom">
-                            <span class="green-txt">Uploaded</span>
+                    <div class="body-middle">
+                        <div class="btn-box">
+                            <button type="button" class="btn secondary approval">
+                                <span class="btn-txt">결재</span>
+                                <span><i class="fa-solid fa-chevron-down"></i></span>
+                            </button>
+                            <button type="button" class="btn secondary announcement">
+                                <span class="btn-txt">공람</span>
+                                <span><i class="fa-solid fa-chevron-down"></i></span>
+                            </button>
+                        </div>
+                        <div class="approval-toggle toggle-box">
+                            <span class="title">
+                                <span class="title-txt">결재</span>
+                                <span class="title-icon"><i class="fa-solid fa-chevron-down"></i></span>
+                            </span>
+                            <div th:if="!${#lists.isEmpty(allApprover)}" th:each="list: ${allApprover}">
+                                <div>
+                                    <span th:text="${list.emp_nm}"></span>
+                                    <input type="checkbox" name="approver[]" th:value="${list.code}" th:attr="data-id=${list.empid}" th:checked="!${#lists.isEmpty(approver)} and ${#lists.contains(approver, list.empid)}" />
+                                    <span class="check"><i class="fa-regular fa-square-check fa-lg"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="announcement-toggle toggle-box">
+                            <span class="title">
+                                <span class="title-txt">공람(모든 공람 선택/해제)</span>
+                                <span class="title-icon"><i class="fa-solid fa-chevron-down"></i></span>
+                            </span>
+                            <div th:if="!${#lists.isEmpty(allViewer)}" th:each="view: ${allViewer}">
+                                <div>
+                                    <span th:text="${view.emp_nm}"></span>
+                                    <input type="checkbox" name="viewer[]" th:value="${view.code}" th:checked="!${#lists.isEmpty(viewer)} and ${#lists.contains(viewer, view.empid)}" />
+                                    <span class="check"><i class="fa-regular fa-square-check fa-lg"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <span class="title">내용</span>
+                            <textarea id="content" name="contents">[[${info.contents}]]</textarea>
                         </div>
                     </div>
-                </div>
+                    <div class="body-bottom">
+                        <div class="title-box">
+                            <span class="title">첨부파일</span>
+                            <input type="file" accept-charset="UTF-8" id="file-upload" class="hidden" />
+                            <span class="title-icon file-upload"><i class="fa-solid fa-plus"></i></span>
+                            <div class="file-box" th:if="${file} != null" th:each="file: ${file}">
+                                <span class="filename">[[${file.original_file_name}]]</span>
+                                <input type="hidden" class="attachid" th:value="${file.attachid}" />
+                                <input type="hidden" class="original_file_name" th:value="${file.original_file_name}" />
+                                <input type="hidden" class="temp_file_name" th:value="${file.file_path}" />
+                                <span class="minus-icon">
+                                    <i class="fa-solid fa-circle-minus"></i>
+                                    <span class="file-size">0MB</span>
+                                </span>
+                                <div class="file-bottom">
+                                    <span class="green-txt">Uploaded</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
