--- a/bin/main/templates/view.html
+++ b/bin/main/templates/view.html
@@ -2,6 +2,7 @@
     <head>
         <title>서류보기</title>
         <div th:replace="~{fragments/header::header}"></div>
+        <script th:src="@{/js/view.js}"></script>
     </head>
     <div class="wrapper">
         <div class="view-head">
@@ -10,14 +11,54 @@
         </div>
         <div id="view">
             <div class="view-body">
+                <div class="btn-box">
+                    <button th:if="${view.empid} == ${empid} and ${view.status_cd} == '진행중' and ${path} == 'personalDoc'" type="button" class="btn primary" id="docCollect">회수</button>
+                    <button th:if="!${#lists.contains(docApprover, empid)} and ${#lists.contains(allApprover, empid)} and ${view.status_cd} == '진행중' and ${path} == 'sign'" type="button" id="docCheck" class="btn primary">승인</button>
+                    <button th:if="!${#lists.contains(docApprover, empid)} and ${#lists.contains(allApprover, empid)} and ${view.status_cd} == '진행중' and ${path} == 'sign'" type="button" id="docRefer" class="btn warning">반려</button>
+                    <button th:if="!${#lists.contains(docViewer, empid)} and ${#lists.contains(allViewer, empid)} and ${path} == 'announcementCheck'" type="button" id="viewerCheck" class="btn primary">확인</button>
+                    <input th:if="!${#lists.contains(docApprover, empid)} and ${#lists.contains(allApprover, empid)} and ${view.status_cd} == '진행중'" type="hidden" id="pos_cd" th:value="${user['pos_cd']}"/>
+                    <input th:if="!${#lists.contains(docViewer, empid)} and ${#lists.contains(allViewer, empid)}" type="hidden" id="coop_cd" th:value="${user['coop_cd']}"/>
+                    <input th:if="!${#lists.contains(docApprover, empid)} and ${#lists.contains(allApprover, empid)} and ${view.status_cd} == '진행중'" type="hidden" id="step" th:value="${step}"/>
+                </div>
                 <div class="body-top">
-                    <select class="input-text xs" name="">
-                        <option>결재</option>
-                    </select>
-                    <select class="input-text xs">
-                        <option>공람</option>
-                    </select>
-                    <button type="button" class="btn primary">회수</button>
+                    <button type="button" class="btn secondary approval">
+                        <span class="btn-txt">결재</span>
+                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                    </button>
+                    <button type="button" class="btn secondary announcement">
+                        <span class="btn-txt">공람</span>
+                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                    </button>
+                </div>
+                <div class="approval-toggle toggle-box">
+                    <span class="title">
+                        <span class="title-txt">결재</span>
+                        <span class="title-icon"><i class="fa-solid fa-chevron-down"></i></span>
+                    </span>
+                    <div th:if="!${#lists.isEmpty(approver)}" th:each="list: ${approver}">
+                        <div>
+                            <span th:text="${list.emp_nm}"></span>
+                            <span class="check" th:classappend="!${#lists.isEmpty(docApprover)} and ${#lists.contains(docApprover, list.empid)} ? '' : 'gray-txt'"><i class="fa-regular fa-square-check fa-lg"></i></span>
+                        </div>
+                    </div>
+                    <div class="not-found" th:unless="!${#lists.isEmpty(approver)}">
+                        <span>선택된 결재자가 없습니다.</span>
+                    </div>
+                </div>
+                <div class="announcement-toggle toggle-box">
+                    <span class="title">
+                        <span class="title-txt">공람</span>
+                        <span class="title-icon"><i class="fa-solid fa-chevron-down"></i></span>
+                    </span>
+                    <div th:if="!${#lists.isEmpty(viewer)}" th:each="viewer: ${viewer}">
+                        <div>
+                            <span th:text="${viewer.emp_nm}"></span>
+                            <span class="check" th:classappend="!${#lists.isEmpty(docViewer)} and ${#lists.contains(docViewer, viewer.empid)} ? '' : 'gray-txt'"><i class="fa-regular fa-square-check fa-lg"></i></span>
+                        </div>
+                    </div>
+                    <div class="not-found" th:unless="!${#lists.isEmpty(viewer)}">
+                        <span>선택된 공람자가 없습니다.</span>
+                    </div>
                 </div>
                 <div class="body-middle">
                     <div class="info-box">
@@ -33,8 +74,6 @@
                             </div>
                             <div>
                                 <span class="text-title">작성자</span>
-                                <span class="half-width">[[${view.emp_nm}]]</span>
-                                <span class="text-title">작성자</span>
                                 <span>[[${view.emp_nm}]]</span>
                             </div>
                             <div>
@@ -44,12 +83,12 @@
                                 <span>[[${view.status_cd}]]</span>
                             </div>
                             <div>
-                                <span class="text-title">반려</span>
-                                <span class="yellow-txt">[[${view.reference_id}]]</span>
+                                <span class="text-title">반려문서</span>
+                                <span class="yellow-txt copy_id" th:attr="data-id=${view.copy_docid}">[[${view.copy_id}]]</span>
                             </div>
                             <div>
-                                <span class="text-title">문서번호</span>
-                                <span class="green-txt">[[${view.doc_num}]]</span>
+                                <span class="text-title">참고문서</span>
+                                <span class="green-txt refer_id" th:attr="data-id=${view.reference_docid}">[[${view.reference_id}]]</span>
                             </div>
                         </div>
                     </div>
@@ -59,20 +98,46 @@
                             [(${view.contents})]
                         </div>
                     </div>
+                    <div class="file-box" th:if="!${#lists.isEmpty(file)}">
+                        <span class="title">첨부파일</span>
+                        <div th:each="file: ${file}">
+                            <span class="filename"><a download class="file-download" th:href="${file.file_path}" th:text="${file.original_file_name}"></a></span>
+                        </div>
+                    </div>
                     <div class="comments">
                         <span>대화</span>
                         <div class="comment-list">
-                            <div th:if="!${#lists.isEmpty(chatList)}" th:each="list: ${chatList}">
-                                <span th:text="${list.contents}"></span>
+                            <div th:if="!${#lists.isEmpty(chatList)}" th:classappend="${list.emp_nm} != ${name} ? 'bg-gray1 left' : 'bg-yellow right'" th:each="list: ${chatList}" class="comment">
+                                <div class="chat-user">
+                                    <span th:text="${list.emp_nm}"></span>
+                                </div>
+                                <div class="chat-contents">
+                                    <span th:text="${list.contents}"></span>
+                                </div>
                             </div>
                         </div>
-                        <div>
-                            <form action="/saveChat" method="POST">
-                                <input type="text" class="input-text s" name="chatContents" />
-                                <button type="button" class="btn secondary">전송</button>
+                        <div class="chat-form">
+                            <form id="saveChat">
+                                <input type="hidden" id="docid" th:value="${docid}"/>
+                                <input type="hidden" id="empid" th:value="${empid}"/>
+                                <input type="text" class="input-text s" id="chatContents" />
+                                <button type="button" id="saveChat_submit" class="btn secondary">전송</button>
                             </form>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="popup-modal">
+        <div class="popup-wrapper">
+            <div class="popup-content">
+                <div class="popup-body">
+                    <!-- popup 내용 -->
+                </div>
+                <div class="popup-footer">
+                    <button class="btn secondary popup-close" type="button">닫기</button>
                 </div>
             </div>
         </div>
